--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Subhadip Shee - Resume PDF">
-  <meta name="keywords" content="Subhadip Shee, Resume, PDF, Developer">
-  <meta name="author" content="Subhadip Shee">
-  <title>Subhadip Shee - Resume</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Subhadip Shee - Backend Developer Resume PDF from Kolkata" />
+  
+  <!-- SEO Keywords -->
+  <meta name="keywords" content="Subhadip Shee, Subhadip, Backend Developer, Software Engineer, Resume, PDF, Kolkata, India, Developer Portfolio, Programming" />
+  
+  <meta name="author" content="Subhadip Shee" />
+
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="8eAT6BhTbcCZ9k_nNeemE1zVFeV0i7ePAREj7Bil86o" />
+
+  <title>Subhadip Shee - Backend Developer Resume</title>
+
+  <!-- Redirect immediately to resume.pdf -->
   <meta http-equiv="refresh" content="0; url=resume.pdf" />
 </head>
 <body>
