--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <meta name="keywords" content="Subhadip Shee, Subhadip, Backend Developer, Software Engineer, Resume, PDF, Kolkata, India, Developer Portfolio, Programming" />
   <meta name="author" content="Subhadip Shee" />
   
-  <meta name="google-site-verification" content="8eAT6BhTbcCZ9k_nNeemE1zVFeV0i7ePAREj7Bil86o" /> 
-  
+  <meta name="google-site-verification" content="8eAT6BhTbcCZ9k_nNeemE1zVFeV0i7ePAREj7Bil86o" />
   
   <title>Subhadip Shee - Backend Developer Resume</title>
   
-  <meta http-equiv="refresh" content="0; url=resume.pdf" />
+  <!-- Redirect after 5 seconds delay -->
+  <meta http-equiv="refresh" content="5; url=resume.pdf" />
 </head>
 <body>
-  <p>Redirecting to my resume...</p>
+  <p>Redirecting to my resume in 5 seconds...</p>
+  <p>If you are not redirected automatically, <a href="resume.pdf">click here to view my resume</a>.</p>
 </body>
 </html>
